fix: border-spacing for table

--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ article {
 
 .tabella {
     width: 100%;
+    border-spacing: 0;
    
 }
 
